<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">货帮主</string>
    <string name="app_landing">登陆</string>
    <string name="app_zc">注册</string>

    <string name="main_tab_name_home">首页</string>
    <string name="main_tab_name_searchGoods">找货</string>
    <string name="main_tab_name_work">发货</string>
    <string name="main_tab_name_waybill">运单</string>
    <string name="main_tab_name_my">我</string>

    <string name="landing_phone">输入手机号</string>
    <string name="landing_password">输入密码</string>
    <string name="landing_code">输入验证码</string>

    <string name="error_1">帐号或密码错误</string>
    <string name="error_2">帐号异常，请联系客服处理</string>
    <string name="error_3">错误操作</string>
    <string name="error_4">手机号码错误，请重新输入</string>
    <string name="error_5">重复发送的间隔时间为60秒，请稍后再试</string>
    <string name="error_6">短信验证码错误</string>
    <string name="error_7">短信验证码过期，请重新获取验证码</string>
    <string name="error_8">手机号已使用过，请更换后重新注册</string>
    <string name="error_9">请填写完整信息</string>
    <string name="app_error">应用程序错误</string>
    <string name="app_error_message">很抱歉，小屁孩耍脾气啦。<br/>我们会帮你教训一下这个小屁孩！</string>
    <string name="submit_report">打报告去</string>
    <string name="net_error">网络连接异常，请检查网络连接！</string>

    <string name="xlistview_header_hint_normal">下拉刷新</string>
    <string name="xlistview_header_hint_ready">松开刷新数据</string>
    <string name="xlistview_header_hint_loading">正在加载...</string>
    <string name="xlistview_header_last_time">上次更新时间：</string>
    <string name="xlistview_footer_hint_normal">查看更多</string>
    <string name="xlistview_footer_hint_ready">松开载入更多</string>

    <string name="goods_type_0">重货</string>
    <string name="goods_type_1">泡货</string>

    <string name="waybill_title">货源详情</string>
    <string name="waybill_hint">将您期望的运费告诉货主,让货主跟快找到您</string>
    <string name="waybill_title_time1">装车日期</string>
    <string name="waybill_title_time2">发布时间</string>
    <string name="waybill_title_shipment">装货地</string>
    <string name="waybill_title_unload">卸货地</string>
    <string name="waybill_title_car">需要车型</string>
    <string name="waybill_title_goods">货物类型</string>
    <string name="waybill_title_weight">重量 / 体积</string>
    <string name="waybill_title_note">备注</string>

    <string name="user_info_title">个人信息</string>
    <string name="user_info_picture">头像</string>
    <string name="user_info_name">姓名</string>
    <string name="user_info_mobilePhone">手机</string>
    <string name="user_info_qq">QQ</string>
    <string name="user_info_firmName">公司名称</string>
    <string name="user_info_city">常用城市</string>
    <string name="user_info_ofFirm">所属公司</string>
    <string name="user_info_completeNum">完成货单</string>
    <string name="user_info_integral">剩余积分</string>
    <string name="user_info_cash">剩余现金</string>
    <string name="user_info_comment">服务评价</string>

    <string name="user_info_plate">车牌号</string>
    <string name="user_info_carType">车型</string>
    <string name="user_info_carExtent">车长</string>
    <string name="user_info_carLoad">载重</string>
    <string name="user_info_phone">随车电话</string>
    <string name="user_info_password">修改密码</string>

    <string name="user_prove_title">认证</string>
    <string name="user_prove_tab1">实名认证</string>
    <string name="user_prove_tab2">车辆认证</string>


    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="loading">加载中…</string>
    <string name="loading_no_more">已加载全部</string>

    <!-- Error View -->
    <string name="error_view_click_to_refresh">点击屏幕,重新加载</string>
    <string name="error_view_no_data">暂无内容</string>
    <string name="error_view_loading">加载中…</string>
    <string name="error_view_load_error_click_to_refresh">内容加载失败\r\n点击重新加载</string>
    <string name="error_view_network_error_click_to_refresh">没有可用的网络</string>
    <string name="tip_network_error">没有可用的网络</string>

    <string name="unlogin">未登录，请先登录</string>
    <string name="unlogin_tip">您还未登录\r\n或网络延迟</string>
    <string name="my_information_unlogin_tips">未登录</string>

    <string name="hint_username">输入账号/邮箱</string>
    <string name="hint_password">密码</string>
    <string name="login">登录</string>
    <string name="tip_please_input_username">请输入用户名</string>
    <string name="tip_illegal_email">请输入正确的email地址</string>
    <string name="tip_please_input_password">请输入密码</string>
    <string name="progress_login">正在登录…</string>
    <string name="tip_login_error_for_network">对不起,无法登录</string>
    <string name="tip_no_internet">当前没有可用的网络链接</string>

    <string name="detail_menu_unfavorite">取消收藏</string>
    <string name="detail_menu_favorite">收藏</string>
    <string name="detail_menu_for_share">分享</string>
    <string name="detail_menu_for_report">举报</string>

    <string name="add_favorite_success">收藏成功</string>
    <string name="add_favorite_faile">收藏失败</string>
    <string name="del_favorite_success">已取消收藏</string>
    <string name="del_favorite_faile">取消收藏失败</string>

    <string name="progress_submit">正在提交…</string>

    <string name="ok">确定</string>
    <string name="cancle">取消</string>
    <string name="clean_cache_mes">是否清空缓存?</string>
    <string name="draft_tweet_message">是否保存为草稿?</string>
    <string name="clearwords">是否清空内容?</string>
    <string name="choose_picture">选择图片</string>
    <string name="tip_content_empty">内容不能为空</string>
    <string name="tip_content_too_long">内容太长</string>

    <!-- 找人不显示标题 -->
    <string name="actionbar_title_find_user"></string>
    <string name="actionbar_title_event">活动</string>
    <string name="actionbar_title_event_apply">活动出席人员</string>
    <string name="actionbar_title_same_city">同城</string>

    <!-- 博客区 -->
    <string name="actionbar_title_blog_area">博客区</string>

    <string name="private_message">私信</string>
    <string name="follow_user">关注</string>
    <string name="unfollow_user">取消关注</string>
    <string name="follow_each_other">取消互粉</string>
    <string name="latest_login_time">最近登录  %s</string>

    <string name="actionbar_title_profile">个人中心</string>
    <string name="favorite">收藏</string>
    <string name="following">关注</string>
    <string name="follower">粉丝</string>
    <string name="join_time">加入时间:</string>
    <string name="location">所在地区:</string>
    <string name="development_platform">开发平台:</string>
    <string name="academic_focus">专长领域:</string>

    <string name="from_web">网页</string>
    <string name="from_mobile">手机</string>
    <string name="from_android">Android</string>
    <string name="from_iphone">iPhone</string>
    <string name="from_windows_phone">Windows Phone</string>
    <string name="from_wechat">微信</string>

    <string name="qr_scan_tips">将二维码/条码放入框内，即可自动扫描</string>
    <string name="actionbar_title_qr_scan">二维码/条码</string>

    <string name="send_message_to">发送私信给:</string>
    <string name="hint_user_name">对方昵称</string>
    <string name="hint_message">私信内容</string>
    <string name="tip_message_public_success">发送成功</string>
    <string name="tip_message_public_faile">发送失败</string>
    <string name="send_to">发给</string>
    <string name="message_count">%s条私信</string>

    <string name="confirm_delete_message">确定要删除和\"%s\"的所有私信吗?</string>
    <string name="confirm_delete_one_message">确定要删除这条私信吗?</string>
    <string name="tip_delete_success">删除成功</string>
    <string name="tip_delete_faile">无法删除</string>

    <string name="copy">复制</string>
    <string name="delete">删除</string>
    <string name="copy_success">复制成功</string>
    <string name="deleting">正在删除…</string>
    <string name="delete_success">删除成功</string>
    <string name="delete_faile">删除失败</string>

    <string name="message_delete_tweet">是否删除该动弹?</string>

    <string name="you_have_news_messages">你有%s条最新消息</string>
    <string name="atme_count">\@我(%s) </string>
    <string name="msg_count">私信(%s) </string>
    <string name="review_count">评论(%s) </string>
    <string name="fans_count">新粉丝(%s) </string>
    <string name="like_count">收到赞(%s) </string>

    <string name="blog">博客</string>
    <string name="information">资料</string>
    <string name="qrcode">二维码</string>
    <string name="message">消息</string>
    <string name="team">团队</string>
    <string name="note">便签</string>
    <string name="bookmarks">收藏夹</string>
    <string name="user_score">积分</string>

    <string name="active">好友圈</string>
    <string name="activities">活动</string>
    <string name="scan">扫一扫</string>

    <string name="loading_img">加载图片</string>
    <string name="mes_notice">消息通知</string>
    <string name="clean_cache">清理缓存</string>
    <string name="double_click_exit">双击退出</string>
    <string name="loading_more">自动加载\"更多\"</string>
    <string name="update">检查新版本</string>
    <string name="about">关于开源中国</string>
    <string name="feedback">意见反馈</string>
    <string name="exit">退出</string>
    <string name="grade">去评分</string>

    <string name="notice_accept">接收新通知</string>
    <string name="notice_voice">声音</string>
    <string name="notice_vibration">震动</string>
    <string name="notice_app_exit">退出后不提醒</string>

    <string name="tip_logout_success">注销成功</string>

    <string name="tip_save_image_suc">图片已保存(手机相册-> osc_img)</string>
    <string name="tip_save_image_faile">无法保存图片</string>
    <string name="tip_load_image_faile">加载图片失败</string>

    <string name="down_state">正在下载：%s</string>

    <string name="qr_code_tip">扫一扫上面的二维码，加我为好友</string>
    <string name="qr_code_tip2">(长按保存到本地)</string>

    <string name="event_start_time">开始：%s</string>
    <string name="event_end_time">结束：%s</string>


    <!-- 反馈 -->
    <string name="str_feedback_submit">提交</string>
    <string name="str_feedback_et_hint">我们将为您不断改进</string>
    <string name="str_feedback_contact">您的手机号或邮箱：（选填）</string>
    <string name="str_feedback_contact_hint">方便我们给您答复</string>
    <string name="str_feedback_succeed">谢谢您的反馈，我们会仔细阅读并及时处理</string>
    <string name="str_feedback_tip">我们会仔细阅读您的反馈，并尽早给您回复。感谢您的理解与支持。</string>
    <string name="str_feedback_title">用户反馈</string>

    <style name="MMTabButton">
        <item name="android:textSize">13.0dip</item>
        <item name="android:gravity">center_horizontal</item>
        <item name="android:layout_width">wrap_content</item>
        <item name="android:layout_height">wrap_content</item>
        <item name="android:button">@null</item>
        <item name="android:textColor">@color/gray</item>
        <item name="android:layout_weight">1.0</item>
        <item name="android:paddingBottom">2.0dip</item>
        <item name="android:paddingTop">2.0dip</item>
    </style>

    <style name="pageTabButton">
        <item name="android:textSize">13.0dip</item>
        <item name="android:gravity">center_horizontal</item>
        <item name="android:layout_width">wrap_content</item>
        <item name="android:layout_height">wrap_content</item>
        <item name="android:button">@null</item>
        <item name="android:textColor">@color/gray</item>
        <item name="android:layout_weight">1.0</item>
    </style>
</resources>
