<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="@color/bg_app">
    <RelativeLayout
        android:background="@color/red"
        android:layout_width="match_parent"
        android:layout_height="40dp">
        <com.cxhd.freight.custom.CustomFontTextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="12dp"
            android:layout_marginTop="6dp"
            android:text=""
            android:id="@+id/reg_back"
            android:onClick="onClick_Event"
            android:clickable="true"
            android:textColor="@color/white"
            android:textSize="20sp"/>
        <TextView
            android:id="@+id/head_tipsTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="注册"
            android:textColor="@color/white"
            android:textSize="20sp"
            android:layout_gravity="center"
            android:textStyle="bold"
            android:layout_centerInParent="true" />
    </RelativeLayout>
    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingLeft="15dp"
        android:paddingTop="30dp"
        android:paddingRight="15dp">

        <TableLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/shape_corner_no_bodr"
            android:stretchColumns="1"
            android:padding="10dip" >
            <!-- 表格布局：第一行 -->
            <TableRow
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:paddingTop="8dp"
                android:paddingBottom="8dp">
                <com.cxhd.freight.custom.CustomFontTextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="5dp"
                    android:text=""
                    android:textColor="@color/black"
                    android:textSize="20sp"
                    android:gravity="center" />
                <EditText
                    android:id="@+id/reg_phone"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:layout_marginLeft="10dp"
                    android:hint="@string/landing_phone"
                    android:maxLength="11"
                    android:inputType="phone"
                    android:layout_weight="1"
                    android:background="@null"
                    android:singleLine="true" >
                </EditText>
            </TableRow>
            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="1dp"
                android:background="@color/line_bottom"/>
            <TableRow
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:paddingTop="8dp"
                android:paddingBottom="8dp">
                <com.cxhd.freight.custom.CustomFontTextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="2dp"
                    android:text=""
                    android:textColor="@color/black"
                    android:textSize="20sp"
                    android:gravity="center" />
                <RelativeLayout
                    android:layout_width="fill_parent"
                    android:layout_height="fill_parent">
                    <EditText
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="10dp"
                        android:id="@+id/reg_code"
                        android:layout_gravity="center_vertical"
                        android:hint="@string/landing_code"
                        android:layout_weight="1"
                        android:background="@null"
                        android:singleLine="true" >
                    </EditText>
                    <Button
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:background="@drawable/bg_buttom_red"
                        android:id="@+id/reg_code_btn"
                        android:onClick="onClick_Event"
                        android:paddingLeft="10dp"
                        android:paddingRight="10dp"
                        android:text="获取验证码"
                        android:textColor="@color/white"
                        android:textSize="18dp"
                        android:layout_alignParentRight="true" />
                </RelativeLayout>
            </TableRow>
            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="1dp"
                android:background="@color/line_bottom"/>
            <TableRow
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:paddingTop="8dp"
                android:paddingBottom="8dp">
                <com.cxhd.freight.custom.CustomFontTextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="2dp"
                    android:text=""
                    android:textColor="@color/black"
                    android:textSize="20sp"
                    android:gravity="center" />
                <EditText
                    android:id="@+id/reg_password"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="10dp"
                    android:layout_gravity="center_vertical"
                    android:inputType="textPassword"
                    android:password="true"
                    android:hint="@string/landing_password"
                    android:layout_weight="1"
                    android:background="@null"
                    android:singleLine="true" >
                </EditText>
            </TableRow>
            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="1dp"
                android:background="@color/line_bottom"/>
            <TableRow
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:paddingTop="8dp"
                android:paddingBottom="8dp">
                <com.cxhd.freight.custom.CustomFontTextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="2dp"
                    android:text=""
                    android:textColor="@color/black"
                    android:textSize="20sp"
                    android:gravity="center" />
                <EditText
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="10dp"
                    android:id="@+id/reg_user_name"
                    android:layout_gravity="center_vertical"
                    android:hint="真实姓名"
                    android:layout_weight="1"
                    android:background="@null"
                    android:singleLine="true" >
                </EditText>
            </TableRow>
            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="1dp"
                android:background="@color/line_bottom"/>
            <TableRow
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:paddingTop="6dp"
                android:paddingBottom="8dp">
                <com.cxhd.freight.custom.CustomFontTextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="2dp"
                    android:text=""
                    android:textColor="@color/black"
                    android:textSize="20sp"
                    android:gravity="center" />
                <EditText
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="10dp"
                    android:layout_gravity="center_vertical"
                    android:id="@+id/reg_car_plate"
                    android:hint="车牌号"
                    android:layout_weight="1"
                    android:background="@null"
                    android:singleLine="true" >
                </EditText>
            </TableRow>
        </TableLayout>
        <Button
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/bg_buttom_red"
            android:id="@+id/reg_btn"
            android:onClick="onClick_Event"
            android:layout_marginTop="20dp"
            android:enabled="false"
            android:text="我已阅读并同意《软件服务协议》,开始注册"
            android:textColor="@color/white"
            android:textSize="16dp"/>
    </LinearLayout>
</LinearLayout>